--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-rest-api-with-jwt"
 version = "0.1.0"
-authors = ["SakaDream <bahaimt@gmail.com>"]
+authors = ["yoonwii <s.djimera@yoonwii.com>"]
 edition = "2018"
 
 [dependencies]
